# mygame

./: .gitginore  .gitignore  CMakeLists.txt  Makefile  MkImg.sh  README.md  buildwin.sh
Licenses/: bgm.txt  main.txt  sdl.txt
builddir/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  game
cm/: Makefile  cm.toml
helpers/: FileHeader.txt  MkMenu.sh  buildwasm.sh  buildwin.sh  credtxt.txt
jsport/: MkCreds.sh  MkMenu.sh  credtxt.txt
jsport/a-lil-game/: package-lock.json  package.json
jsport/a-lil-game/src/: main.js
res/nums/: MkNums.sh
src/: Game.c  Setup.c  StartMusic.c  game_setup.h  global.h  views.h
src/ScoreRenderer/: Init.c  Numbers.h  RenderNum.c
src/views/: CredsView.c  DeadView.c  MainView.c  MenuView.c  WinView.c
src/views/MainHelpers/: Helpers.h  UpdatePos.c
